+ Layout bug
git-svn-id: http://agilefant.googlecode.com/svn/trunk@1340 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -810,6 +810,7 @@ td.icons a img {
 .infoTable .info1 {
 	width: 120px;
 	padding: 3px 8px;
+	height: 100%;
 }
 
 .infoTable .info2 {
